[package]

name = "redfa"
version = "0.0.1"
authors = ["Geoffry Song <goffrie@gmail.com>"]

homepage = "https://github.com/goffrie/redfa"
repository = "https://github.com/goffrie/redfa"
documentation = "http://goffrie.github.io/redfa"
license = "MIT OR Apache-2.0"
keywords = ["regex", "dfa"]

[features]

unstable = []

[lib]

name = "redfa"

[dependencies]

vec_map = "0.3.0"
bit-set = "0.2.0"
