[package]

name = "redfa"
version = "0.0.2"
authors = ["Geoffry Song <goffrie@gmail.com>"]

description = "Regular expression derivatives for creating DFAs."

homepage = "https://github.com/goffrie/redfa"
repository = "https://github.com/goffrie/redfa"
documentation = "http://goffrie.github.io/redfa"
license = "MIT OR Apache-2.0"
keywords = ["regex", "dfa"]

[features]

unstable = []

[lib]

name = "redfa"

[dependencies]

vec_map = "0.6.0"
bit-set = "0.4.0"
